# job-shop-simulator

./: .dockerignore  .gitignore  LICENSE  README.md  cartpole_double_q_learning.py  cartpole_double_q_tm.py  cartpole_q.py  cartpole_qtm.py  main.py  main_all.py  main_all_1.py  main_heuristic.py  main_q.py  main_qtm.py  main_qtm_taillard.py  main_tm.py  main_wandb.py  pyproject.toml  read_html_file.py  setup.py  transformer_test.py
.devcontainer/: Dockerfile  devcontainer-cpu.json  devcontainer.json
.github/workflows/: publish.yml  wheels.yml
jsp/: CMakeLists.txt  CMakePresets.json  Config.cmake.in  generate_graph.sh  vcpkg.json
jsp/bindings/: jobshop_bindings.cpp  multi_dim_array_bind.cpp
jsp/environments/: doris.csv  install_requirements.sh  parser.py
jsp/examples/: ppo_action.py  ppo_action_with_uncertaintity.py  requirements.txt  sample_application_simple.py  sample_applicationmp.py
jsp/include/: dotfile.h  job_shop_actor_critic.h  job_shop_algorithms.h  job_shop_environment.h  job_shop_generator.h  job_shop_manual_generator.h  job_shop_plotter.h  job_shop_ppo.h  job_shop_qlearning.h  job_shop_taillard_generator.h  multidimensional_array.hpp  util.h
jsp/include/algorithms/: job_shop_algorithms.h  job_shop_ppo.h
jsp/include/environment/: job_shop_environment.h  job_shop_environment_generator.h  job_shop_json_handler.h  job_shop_manual_generator.h
jsp/include/solvers/: optimal_job_shop_solver.h
jsp/jsp/: jsp_env.py
jsp/jsp/py/: job_shop_automatic_generator.py  job_shop_environment.py  job_shop_manual_generator.py  job_shop_taillard_generator.py  main.py  structs.py
jsp/jsp/py/algorithms/: base.py  greedy.py  q_learning.py
jsp/src/: dummy.cpp  job_shop_actor_critic.cpp  job_shop_environment.cpp  job_shop_qlearning.cpp  main.cpp
jsp/tests/: test_mdarray.cpp
jsp_gymnasium/: DQN_gpu.py  DQN_wandb.py  Job_shop_taillard_generator.py  QTM_gpu.py  QTM_jssp.py  QTM_jssp_MultiClassTsetlinMachine.py  QTM_jssp_MultiClassTsetlinMachine_wandb copy.py  QTM_jssp_gpu.py  QTM_manual.py  __init__.py  check_gpu.py  example.py  job_shop_env.py  job_shop_greedy.py  job_shop_manual_generator.py  jsp_json_env.py  main.py  q_learning.py  q_learning_jssp.py  results.json  solve_jssp.py  stable_baseline3_ppo.py  stable_baselines3_train_ppo.py
jsp_gymnasium/code_reshma/: q_learning.py
jsp_gymnasium/results/ta01/: ta01_20241120_125445.json  ta01_20241120_125737.json  ta01_latest.json
per_jsp/: .gitignore  __version_scheme.py
per_jsp/cpp/: CMakeLists.txt  CMakePresets.json  Config.cmake.in  generate_graph.sh  vcpkg.json
per_jsp/cpp/bindings/: per_jspp_bindings.cpp
per_jsp/cpp/include/algorithms/: job_shop_actor_critic.h  job_shop_qlearning.h
per_jsp/cpp/include/environment/: job_shop_environment.h  job_shop_manual_generator.h  job_shop_taillard_generator.h
per_jsp/cpp/include/gui/: job_shop_plotter.h
per_jsp/cpp/include/utilities/: multidimensional_array.hpp  util.h
per_jsp/cpp/src/: dummy.cpp  main.cpp
per_jsp/data/: __init__.py
per_jsp/data/lawrance_instances/: convert.py  fifo.py  la01.txt  la20.txt  la25.txt  la25_old.txt  la30.txt  la30_old.txt  la35.txt  la35_old.txt  la40.txt  la40_old.txt
per_jsp/data/problem_instances/: doris_1.json  doris_2.json  doris_3.json
per_jsp/data/taillard_instances/: ta01.txt  ta_00.txt
per_jsp/environments/: doris.json
per_jsp/examples/cpp/: ppo_action.py  q_learning.py  random_policy.py  requirements.txt  sample_application_simple.py  sample_applicationmp.py
per_jsp/examples/python/: generate_dataset.py  generate_dataset.sh  main.py
per_jsp/python/per_jsp/algorithms/: base.py  double_qtm.py  dqn.py  fifo.py  greedy.py  heuristic_mc_tool.py  mwkr.py  ortools.py  ppo_2.py  ppo_do.py  q_learning.py  q_learning_v1.py  q_learning_v2.py  qqtm.py  qtm.py  qtm_1.py  qtm_taillard.py  spt.py  tm_jssp.py
per_jsp/python/per_jsp/cpp/: jsp_env.py
per_jsp/python/per_jsp/environment/: job_shop_automatic_generator.py  job_shop_environment.py  job_shop_environment_original.py  job_shop_manual_generator.py  job_shop_taillard_generator.py  jsp_env_gym.py  tm_heuristic_spt.py  tm_taillard.py  tm_taillard_gpu.py
per_jsp/python/per_jsp/tests/: environment_test.py
per_jsp/tests/cpp/: test_mdarray.cpp
python/old/: LAB_Matrix(jobshop_mutaion)  LAB_matrix(GA).py  LAB_matrix(Jobsjhop_nomutation)  dmvisulaization.py  draft2.py  ganttchart.py  geneticalgo_revision.py  graphformutation.py  gridsearch.py  jobshop_github.py  jobshop_revision.py  mutation2_insertingVersion.py  mutation_insertingVersion.py  operationlevel.py  softmax_graph.py  timevisualization.py
